--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
         "namedComponents": ["arrow-function", "function-declaration"]
       }
     ],
-    "react/prop-types": 0,
+    "react/prop-types": [2, { "ignore": ["navigation"] }],
     "arrow-body-style": ["error", "always"],
     "react/jsx-curly-brace-presence": 0,
     "no-unused-vars": 1
