--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,6 @@
     "arrow-body-style": ["error", "always"],
     "react/jsx-curly-brace-presence": 0,
     "no-unused-vars": 1,
-    "react/no-unstable-nested-components": 0
+    "react/no-unstable-nested-components": [2, { "allowAsProps": true }]
   }
 }
