--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "memoapp",
+  "name": "PersonalNote",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.12.8",
+    "@use-expo/font": "^2.0.0",
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
